# simviator-microservices

./: ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  LICENSE  Makefile  README.md  docker-compose.yml  launch_services.py  pyproject.toml  requirements.txt
config/: orchestrator_example.json
services/bot_control/: main.py
services/orchestrator/: main.py
services/simviator/: aviation_pronunciation.py  flight_guidance_character.py  main.py
tests/: conftest.py  test_health.py
